# sc_blog

./: .gitignore  README.md
.github/workflows/: bp.yml  node.js.yml  rust.yml
sc_blog_axum/: Cargo.toml
sc_blog_axum/src/: config.rs  lib.rs  main.rs
sc_blog_axum/src/article/: mod.rs  model.rs  service.rs
sc_blog_axum/src/content/: mod.rs  model.rs  service.rs
sc_blog_axum/src/db/: db.rs
sc_blog_axum/src/http/: api_response.rs
sc_blog_axum/src/posts/: mod.rs  model.rs  service.rs
sc_blog_axum/src/state/: app_state.rs
sc_blog_axum/src/user/: mod.rs  model.rs  service.rs
sc_blog_axum/src/utils/: mod.rs
sc_blog_next/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
sc_blog_next/src/app/: layout.tsx  main.tsx  page.tsx  theme_providers.tsx
sc_blog_next/src/app/api/login/: route.ts
sc_blog_next/src/app/blog/: page.tsx
sc_blog_next/src/app/blog/[...slug]/: page.tsx
sc_blog_next/src/app/components/: custom_react_markdown.tsx  footer.tsx  header.tsx  list_layout_tags.tsx  nav_links.ts  section_container.tsx  tag.tsx  theme_switch.tsx
sc_blog_next/src/app/login/: page.tsx
sc_blog_next/src/components/: form.tsx  header.tsx  httpResponse.ts  prefixCommon.ts  slide_menu.tsx
sc_blog_react/: package.json  tailwind.config.js
sc_blog_salvo/: Cargo.toml
sc_blog_salvo/src/: main.rs
sc_blog_salvo/src/fs_helper/: mod.rs
sc_blog_salvo/src/static/html/: 404.html  hello.html  index.html
sc_blog_salvo/src/static/md/: catalog.md  test1.md
sc_blog_salvo/src/static/template/: index.html.tera
(+1 files in other folders)
