[package]
name = "sc_blog_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "chrono"
] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
